syntax = "proto3";

package calculator;

option java_package = "com.justin.proto.calculator";
option java_multiple_files = true;

message CalculateRequest {
    int32 num_1 = 1;
    int32 num_2 = 2;
}

message CalculateResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double result = 1;
}

service CalculateService {
    // Unary
    rpc Calculate(CalculateRequest) returns (CalculateResponse) {};

    // error handling
    // this RPC will throw and exception if the sent number is negative
    // the error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}